[package]
name = "wasm"
version = "0.1.0"
authors = ["Victor Essnert <me@victr.com>"]
edition = "2018"
workspace ="../"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lisper = { path = ".."}
wasm-bindgen = "0.2.69"