[package]
name = "lisper-wasm"
version = "0.1.5"
authors = ["Victor Essnert <me@victr.com>"]
edition = "2018"
workspace ="../"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lisper = { path = ".."}
wasm-bindgen = "0.2.69"
wasm-bindgen-test = "0.3.19"

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

[package.metadata.wasm-pack.profile.release]
lto = true